--- a/Exercicio1/L0Q2.in
+++ b/Exercicio1/L0Q2.in
@@ -1,2 +1,2 @@
-maria 3.15 jose 4 8 -1 12.7 (-1,-1) julia (-0.5,-0.5)
-74.5 3.15 jose 5 8 -1 12.7 (8,2) carlos (-10.5,-0.5)
+maria 3.15 98 meire 1.89 (6,7) 45.8 74.45 jovem 7 48 jose 4 8 -1 12.7 (-1,-1) 74 89 79 julia (-1.5,-0.5)
+74.5 3.15 (2,4) 7 (1.6,5) 8.78 96 12 75 75.9 jose 5 8 (7,9) -1 12.7 (8,2) carlos (-0.5,-0.5)
